# ragJ_platform

./: .env  .gitignore  CLAUDE.md  DEEPSEEK_SETUP.md  LICENSE  QUICK_START.md  README.md  README.zh-CN.md  docker-compose.dev.yml  docker-compose.yml  test_llm_connection.py  企业级智能体平台改进方案.md
backend/: .env.dev  .env.example  Dockerfile  Dockerfile.dev  benchmark_rust_integration.py  demo_error_handling.py  demo_langgraph_workflow.py  demo_parallel_execution.py  demo_performance_monitoring.py  model_configs.json  ragj_platform.db  requirements.txt  test_dimension_fix.py  visualize_langgraph_workflow.py  workflow_example.py
backend/app/: __init__.py  celery_app.py  main.py
backend/docs/: langgraph_api.md
backend/scripts/: backfill_document_chunks.py  entrypoint-dev.sh  entrypoint.sh
backend/tests/: test_hybrid_search_pipeline.py  test_langgraph_chat.py  (+1 more)
docs/: directory_structure.md  ragflow_architecture_summary.md  system_architecture_design.md
elasticsearch_custom/: Dockerfile
frontend/: package-lock.json  package.json  vite.config.ts  前端界面优化说明.md
images/: README.md
project_management/: PROJECT_MANAGEMENT.md  README.md
rust_services/: README.md
rust_services/document_processor/: Cargo.toml  build.py
rust_services/document_processor/src/: error.rs  lib.rs  text_processor.rs  utils.rs
rust_services/document_processor/src/parsers/: csv.rs  docx.rs  epub.rs  excel.rs  html.rs  json.rs  markdown.rs  mod.rs  odt.rs  pdf.rs  powerpoint.rs  rtf.rs  text.rs  xml.rs
使用Rust和Python构建平台的架构与技术设计/: dify_architecture_summary.md  system_architecture_design.md
(+174 files in other folders)
