[package]
name = "document_processor"
version = "0.1.0"
edition = "2021"

[lib]
name = "document_processor"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Document parsing dependencies
pdf-extract = "0.7"
docx-rs = "0.4"
zip = "0.6"
quick-xml = "0.31"
regex = "1.10"
encoding_rs = "0.8"

# Text processing
unicode-segmentation = "1.10"
unicode-normalization = "0.1"

# Async runtime
rayon = "1.8"

# Error handling
mime = "0.3"
mime_guess = "2.0"

# Office formats
calamine = "0.22"  # Excel files
rtf-parser = "0.2"  # RTF files

# Image text extraction (OCR)
tesseract = { version = "0.14", optional = true }

# Additional formats
csv = "1.3"
html2text = "0.12"
markdown = "0.3"
roxmltree = "0.19"  # XML parsing

[features]
default = ["ocr"]
ocr = ["tesseract"]